# arithmetic-formatter

./: .gitignore  README.md  arithmetic_arranger.py  main.py  pyproject.toml
