[tool.poetry]
name = "fcc-arithmetic-formatter"
version = "0.1.0"
description = ""
authors = ["Lauren Tucker <l.blue.tucker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
